syntax = "proto3";

package dropbox;

service DropboxService {
  rpc FindOne (PictureById) returns (Picture) {}
}

message PictureById {
  int32 id = 1;
}

message Picture {
  int32 id = 1;
  string name = 2;
}